--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,8 +1,11 @@
 name: Hello World
-on: [push]
+
+on: 
+  push:
+
 jobs:
-hello:
-runs-on: ubuntu-latest
-steps:
-- name: Hello step
-run: echo "Hello World from GitHub Actions!"
+  hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Hello step
+        run: echo "Hello World from GitHub Actions!"
